--- a/todo
+++ b/todo
@@ -174,15 +174,16 @@ fill architecture could work well.
    - update add unit dialog to just use the selected voice.
    - fix small bug in smooth playhead
    - escape focuses the keyboard editor (is this really an improvement?)
+3. Replace woice. (Was pretty painless, thanks to the variant setup earlier!)
 
 Todo by priority
 ----------------
  - include that one other dll in the package for vcruntime
- - replace woice
  - select an interval, and operations (keycmds) for
    - transposing it up / down
    - moving selection left / right beat or measure
    - cutting / copying / pasting
+   - scaling / shifting vol, vel, other params (once those exist)
    - maybe shift click? but what if I don't want to move playhead?
      ctrl+shift+click? lines up with horizontal zoom!
  - Tempo, time signature controls
