--- a/todo
+++ b/todo
@@ -196,18 +196,14 @@ fill architecture could work well.
 
 7/3
 1. Copy and paste for one unit
+2. Clear / cut for one unit
+3. Not doing hshifting -- too hard with collab, if you undo others' notes will
+   be displaced. If it is done, will prob. have to be separate prim action from
+   paste to avoid desync.
 
 Todo by priority
 ----------------
- - select operations (keycmds) for
-   - clearing / hshifting
-     - shifting should be separate prim action from copy paste
-       - shifting can be local if action assumes destination is empty.
-     - cutting is then copy + clear + shift. insert is just shift + paste
-   - scaling / shifting vol, other params (once those exist)
-   - not gonna support drag / drop to start. ptcollage doesn't have it and it
-     seems complicated. bounding boxes, drag state? omg
- - select multiple units
+ - select multiple units and do select ops on them
    - even though it's redundant, probably will show dropdown (for current unit
      and ops) as well as unit tab (for selecting which units to show / select).
      unit tab items might have checkboxes! for mute, select, show. one of these
@@ -226,6 +222,7 @@ Todo by priority
        with others.
      - something like ptweb
        - can pin instruments to be drums. (list of pinned is global)
+ - select operations (keycmds) for other params (once those exist)
  - more inspiration from domino midi!
 
 Misc todo by categories
