--- a/todo
+++ b/todo
@@ -200,16 +200,15 @@ fill architecture could work well.
 3. Not doing hshifting -- too hard with collab, if you undo others' notes will
    be displaced. If it is done, will prob. have to be separate prim action from
    paste to avoid desync.
+4. Unit list table - current unit depends on selection; mute / visible depend
+   on checked
 
 Todo by priority
 ----------------
  - unit table
    - when adding a unit it needs to be more clear what woice to use. just too disjoint rn
-   - current unit depends on selection
-   - visible depends on checked
+   - make it easier to check / uncheck
    - don't highlight things that aren't playing
-   - maybe things that are selected could be outlined? not sure b/c the vel
-     thing is weird
  - select multiple units and do select ops on them
    - even though it's redundant, probably will show dropdown (for current unit
      and ops) as well as unit tab (for selecting which units to show / select).
