--- a/todo
+++ b/todo
@@ -206,16 +206,12 @@ fill architecture could work well.
 7/4
 1. Make it easier to check / uncheck
 2. Don't highlight / grey muted things out
+3. Transpose, copy / paste multiple units
 
 Todo by priority
 ----------------
- - unit table
-   - when adding a unit it needs to be more clear what woice to use. just too disjoint rn
- - select multiple units and do select ops on them
-   - even though it's redundant, probably will show dropdown (for current unit
-     and ops) as well as unit tab (for selecting which units to show / select).
-     unit tab items might have checkboxes! for mute, select, show. one of these
-     will just be the item's select state)
+ - make it easier to change selection / visible / mute. shortcut for solo?
+ - when adding a unit it needs to be more clear what woice to use. just too disjoint rn
  - Tempo, time signature controls
  - show measure num, set loop points
    - will probably need some pixel font thing
@@ -269,7 +265,7 @@ Technical stuff:
 Editor functionality:
  - echo & overdrive
  - moving voices up and down
- - At some point, gonna have to support selecting multiple voices
+ - edit voice, unit names
 
 Editor QoL:
  - Time bar at the top
