--- a/todo
+++ b/todo
@@ -208,10 +208,10 @@ fill architecture could work well.
 2. Don't highlight / grey muted things out
 3. Transpose, copy / paste multiple units
 4. Reinstate the add unit dialog.
+5. Tempo, time signature controls. Hopefully not too jank.
 
 Todo by priority
 ----------------
- - Tempo, time signature controls
  - show measure num, set loop points
    - will probably need some pixel font thing
  - keyboard on left side of piano roll (probably will help in figuring out how
