--- a/todo
+++ b/todo
@@ -212,6 +212,10 @@ fill architecture could work well.
 
 Todo by priority
 ----------------
+ - fix selection rendering weird if zooms differ
+ - make selection more obvious
+   - highlight all selected notes on chosen units?
+   - show vel of all selected notes?
  - show measure num, set loop points
    - will probably need some pixel font thing
  - keyboard on left side of piano roll (probably will help in figuring out how
