--- a/todo
+++ b/todo
@@ -210,12 +210,18 @@ fill architecture could work well.
 4. Reinstate the add unit dialog.
 5. Tempo, time signature controls. Hopefully not too jank.
 
+7/9
+1. Fix an undo bug hopefully (undone were not invalidated by a new write)
+
 Todo by priority
 ----------------
  - fix selection rendering weird if zooms differ
  - make selection more obvious
    - highlight all selected notes on chosen units?
    - show vel of all selected notes?
+ - preview different pitches / velocities (say, just using last note) so your
+   ear doesn't break
+ - C-d deselect. Maybe just click somewhere to deselect? Idk
  - show measure num, set loop points
    - will probably need some pixel font thing
  - keyboard on left side of piano roll (probably will help in figuring out how
