preview at different pitches / velocities

--- a/todo
+++ b/todo
@@ -220,11 +220,10 @@ fill architecture could work well.
 4. Changed 'muted' column to 'played' since the checked = muted was a bit unintuitive
 5. Outline selected notes on chosen units and show their vel.
 6. Ctrl+D to deselect
+7. Preview at different pitches / velocities based off last note input
 
 Todo by priority
 ----------------
- - preview different pitches / velocities (say, just using last note) so your
-   ear doesn't break
  - show measure num, set loop points
    - will probably need some pixel font thing
  - keyboard on left side of piano roll (probably will help in figuring out how
