Revert "try to have a smaller audio blip"
This reverts commit 78c5b58114e5a5a0d7ca3054e0448fc4c885b760.

--- a/todo
+++ b/todo
@@ -223,6 +223,9 @@ fill architecture could work well.
 7. Preview at different pitches / velocities based off last note input
 8. Smaller audio blip after a seek. 
 
+7/14
+1. Undo this smaller blip thing because it causes windows to be incredibly slow.
+
 Todo by priority
 ----------------
  - seems like it takes forever to do the audio reset now?
