display vel, vol, pan params

--- a/todo
+++ b/todo
@@ -229,15 +229,15 @@ fill architecture could work well.
 7/14
 1. Undo this smaller blip thing because it causes windows to be incredibly slow.
 
-7/17
+7/16
 1. Refactor a ton of stuff to get signals and state centralized.
+
+7/17
+1. Display vel, vol, pan params
+2. fix scrolling not lining up with mouse
 
 Todo by priority
 ----------------
- - show measure num, set loop points
-   - will probably need some pixel font thing
- - keyboard on left side of piano roll (probably will help in figuring out how
-   to sticky a thing in a scrollview)
  - Adidtional bars for other editing:
    - bottom bar for params like vol, pan, etc.
      - change voice events will require a map from voice id to no
@@ -247,6 +247,10 @@ Todo by priority
        with others.
      - something like ptweb
        - can pin instruments to be drums. (list of pinned is global)
+ - show measure num, set loop points
+   - will probably need some pixel font thing
+ - keyboard on left side of piano roll (probably will help in figuring out how
+   to sticky a thing in a scrollview)
  - select operations (keycmds) for other params (once those exist)
  - more inspiration from domino midi!
 
